add README and revise scenario according to its rules

--- a/usecases/UC-NTR-001-0001.feature.md
+++ b/usecases/UC-NTR-001-0001.feature.md
@@ -5,22 +5,27 @@ the Ego vehicle must wait for the maneuver to complete before departing.
 
 ## Scenario Outline: Overtake from left side
 
-* Given Ego is stopping
-* And Npc0 is coming from backward of the Ego
-* When Npc0 overtakes the Ego with <Vn> from the point <Dr> to <Df>
-* Them Ego departs for the destination after Npc finishes the overtake maneuver
-* And Ego reaches the destination
-* And Ego's acceleration does not fall <min_acc>
-* And no collision occurs
-* And the scenario completes within the <T>
+Confirm the vehicle avoids a collision when another vehicle overtakes from the left.
+
+* Given Ego is in standstill
+* And Car0 is positioned behind Ego, in the same driving lane
+* And Car0 is driving at <vx_car0> towards Ego
+* When Car0 reaches a position at distance <dr> behind Ego
+* And Car0 starts overtaking Ego
+* Then Ego remains standstill
+* When Car0 reaches a position <df> ahead of Ego
+* And Car0 finishes the overtake maneuver
+* Then Ego starts driving
+* And Ego reaches the destination without collision
+* And Ego does not decelerate at a rate below <amin_ego> during driving
 
 ![Description](UC-NTR-001-0001.png)
 
 ### Examples
 
-  | Vn      | Dr    | Df    | overtake_offset | min_acc    | T      |
-  | ------- | ----- | ----- | --------------- | ---------- | ------ |
-  | 10 km/h | 7.0 m | 5.0 m | 2.5 m           | -1.5 m/s^2 | 30 sec |
-  | 15 km/h | 7.0 m | 5.0 m | 2.5 m           | -1.5 m/s^2 | 30 sec |
-  | 20 km/h | 7.0 m | 5.0 m | 2.5 m           | -1.5 m/s^2 | 30 sec |
+  | vx_car0 | dr    | df    | overtake_offset | amin_ego   |
+  | ------- | ----- | ----- | --------------- | ---------- |
+  | 10 km/h | 7.0 m | 5.0 m | 2.5 m           | -1.5 m/s^2 |
+  | 15 km/h | 7.0 m | 5.0 m | 2.5 m           | -1.5 m/s^2 |
+  | 20 km/h | 7.0 m | 5.0 m | 2.5 m           | -1.5 m/s^2 |
   
