--- a/usecases/UC-ACC-001-0001.feature.md
+++ b/usecases/UC-ACC-001-0001.feature.md
@@ -18,7 +18,7 @@ Confirm that the ADS is capable of keeping a safe distance from a preceding vehi
 * Then Ego starts decelerating
 * And Ego matches Npc0's longitudinal speed
 
-* When Npc0 starts decelerating to <vxtar_npc0> with a rate of <ax_npc0>
+* When Npc0 starts decelerating to <vx_target_npc0> with a rate of <ax_npc0>
 * Then Ego starts decelerating further
 * And Ego matches Npc0's longitudinal speed
 * And Ego reaches the goal position
@@ -27,7 +27,7 @@ Confirm that the ADS is capable of keeping a safe distance from a preceding vehi
 
 ### Examples
 
-  | vxi_ego | vxi_npc0 | vxtar_npc0 | ax_npc0    | amin_ego   |
+  | vxi_ego | vxi_npc0 | vx_target_npc0 | ax_npc0    | amin_ego   |
   | ------- | -------  | ---------- | ---------- | ---------- |
   | 20 km/h | 10 km/h  | 5 km/h     | -1.5 m/s^2 | -1.5 m/s^2 |
   | 30 km/h | 15 km/h  | 7 km/h     | -1.5 m/s^2 | -1.5 m/s^2 |
