add ntr scenarios
Signed-off-by: Kazuki Ohtake <kazuki.ohtake@tier4.jp>

--- a/usecases/UC-NTR-001-0005.feature.md
+++ b/usecases/UC-NTR-001-0005.feature.md
@@ -1,39 +1,30 @@
-# Feature: Wait for an overtake while stationary
+# Feature: Wait for an overtake from opposite direction lane while stationary
 
-Ensures the vehicle's safety when another Npc overtakes it while stationary.
-The vehicle waits until the maneuver is complete before departing.
+Ensures the vehicle's safety when another car overtakes it at high speed while stationary.
+The vehicle waits until the high-speed overtake maneuver is complete before departing.
 
 ## Scenario Outline: Overtake from left or right side
 
-Confirm that the vehicle waits for a complete overtake before departing.
+Confirm that the vehicle waits for a high-speed overtake from the opposite direction lane to complete before departing.
 
 * Given Ego is in standstill
 * And Npc0 is positioned behind Ego, in the same driving lane
 * And Npc0 is driving at <vxi_npc0> towards Ego
 * When Npc0 reaches a position at distance <dr> behind Ego
-* And Npc0 starts overtaking Ego
+* And Npc0 starts overtaking Ego by using the opposite direction lane
 * Then Ego remains standstill
-* When Npc0 reaches a position <df> ahead of Ego
+* When Npc0 reaches position <df> ahead of Ego
 * And Npc0 finishes the overtake maneuver
 * Then Ego starts driving
 * And Ego reaches the destination without collision
 * And Ego does not decelerate at a rate below <amin_ego> during driving
 
-![Overview](./images/UC-NTR-001-0001.drawio.svg)
+![Overview](./images/UC-NTR-001-0005.drawio.svg)
 
-### Examples: Left side overtake
+### Examples: Npc overtakes through left lane
 
   | vxi_npc0 | dr    | df    | overtake_offset | w     | amin_ego   |
   | -------- | ----- | ----- | --------------- | ----- | ---------- |
   | 20 km/h  | 7.0 m | 5.0 m | 2.5 m           | 3.0 m | -1.5 m/s^2 |
   | 30 km/h  | 7.0 m | 5.0 m | 2.5 m           | 3.0 m | -1.5 m/s^2 |
   | 40 km/h  | 7.0 m | 5.0 m | 2.5 m           | 3.0 m | -1.5 m/s^2 |
-  
-### Examples: Right side overtake
-
-  | vxi_npc0 | dr    | df    | overtake_offset | w     | amin_ego   |
-  | -------- | ----- | ----- | --------------- | ----- | ---------- |
-  | 20 km/h  | 7.0 m | 5.0 m | -2.5 m          | 3.0 m | -1.5 m/s^2 |
-  | 30 km/h  | 7.0 m | 5.0 m | -2.5 m          | 3.0 m | -1.5 m/s^2 |
-  | 40 km/h  | 7.0 m | 5.0 m | -2.5 m          | 3.0 m | -1.5 m/s^2 |
-  
