update scenario description
Signed-off-by: Kazuki Ohtake <kazuki.ohtake@tier4.jp>

--- a/usecases/UC-NTR-001-0007.feature.md
+++ b/usecases/UC-NTR-001-0007.feature.md
@@ -4,7 +4,7 @@ This feature ensures that the ego vehicle can safely handle a cut-in from anothe
 
 ## Scenario Outline: Cut-in from outside of the lane
 
-Confirm that the vehicle safely handles a cut-in from a faster vehicle.
+Confirm that the ego vehicle does not slow down when a faster vehicle cuts in.
 
 * Given Ego is driving at <vxi_ego>
 * And Npc0 is in a neighbor lane behind Ego, driving at <vxi_npc0>
