fix parameter table
Signed-off-by: Kazuki Ohtake <kazuki.ohtake@tier4.jp>

--- a/usecases/UC-NTR-001-0008.feature.md
+++ b/usecases/UC-NTR-001-0008.feature.md
@@ -8,8 +8,8 @@ Confirm that the vehicle safely handles a cut-in from a faster vehicle that then
 
 * Given Ego is driving at <vxi_ego>
 * And Npc0 is in a neighbor lane behind Ego, driving at <vxi_npc0>
-* When Npc0 overtakes Ego and performs a lane change to cut in front of Ego at a distance of <npc_lc_dist>
-* And Npc0 decelerates to <vxi_slow_npc0> with acceleration <a_slow_npc0>
+* When Npc0 overtakes Ego and performs a lane change to cut in front of Ego at a distance of <d_lc_npc0>
+* And Npc0 decelerates to <vx_target_slow_npc0> with acceleration <a_slow_npc0>
 * Then Ego reaches the destination without collision
 * And Ego does not decelerate at a rate below <amin_ego>
 * And Ego velocity does not fall below 80% of <vxi_slow_npc0> after Npc0 slows down
@@ -18,8 +18,8 @@ Confirm that the vehicle safely handles a cut-in from a faster vehicle that then
 
 ### Examples
 
-| vxi_npc0 | vxi_ego | d_lc_npc0 | w     | amin_ego    |
-| -------- | ------- | --------- | ----- | ----------- |
-| 18 km/h  | 15 km/h | 1.0 m     | 3.0 m | -0.05 m/s^2 |
-| 20 km/h  | 15 km/h | 1.0 m     | 3.0 m | -0.05 m/s^2 |
-| 30 km/h  | 15 km/h | 1.0 m     | 3.0 m | -0.05 m/s^2 |
+| vxi_npc0 | vxi_ego | vx_target_slow_npc0 | a_slow_npc0 | d_lc_npc0 | w     | amin_ego     |
+| -------- | ------- | ------------------- | ----------- | --------- | ----- | ------------ |
+| 20 km/h  | 15 km/h | 10 km/h             | -1.0 m/s^2  | 1.0 m     | 3.0 m | -2.499 m/s^2 |
+| 20 km/h  | 15 km/h | 12.5 km/h           | -1.0 m/s^2  | 1.0 m     | 3.0 m | -2.499 m/s^2 |
+| 20 km/h  | 15 km/h | 15 km/h             | -1.0 m/s^2  | 1.0 m     | 3.0 m | -2.499 m/s^2 |
