--- a/usecases/UC-NTR-001-0009.feature.md
+++ b/usecases/UC-NTR-001-0009.feature.md
@@ -8,15 +8,14 @@ Confirm that the vehicle safely handles a vehicle starting from the roadside and
 
 * Given Ego is driving at <vxi_ego>
 * And Npc0 is stopping side of the road
-* When the longitudinal distance between Npc0 and Ego is less than <d_trigger_npc0>
-* Then Npc0 starts to follow its trajectory with velocity <vxi_npc0>
-* And Ego reaches the destination without collisions
+* When Npc0 cuts into the ego's lane at <vx_npc0> if the longitudinal distance is under <d_trigger_npc0>
+* Then Ego reaches the destination without collisions
 * And Ego does not decelerate at a rate below <amin_ego>
 
 ![Overview](./images/UC-NTR-001-0009.drawio.svg)
 
 ### Examples
 
-| vxi_npc0 | vxi_ego | d_trigger_npc0 | w     | amin_ego    |
-| -------- | ------- | -------------- | ----- | ----------- |
-|  8 km/h  | 15 km/h | 7.0 m          | 3.0 m | -0.05 m/s^2 |
+| vx_npc0 | vxi_ego | d_trigger_npc0 | w     | amin_ego    |
+| ------- | ------- | -------------- | ----- | ----------- |
+| 8 km/h  | 15 km/h | 7.0 m          | 3.0 m | -0.05 m/s^2 |
