removed scenario road descriptions, changed approach to describe continuous conditions and updated the writing rules accordingly
Signed-off-by: Diego Yabuki <diegoken.yabuki@tier4.jp>

--- a/usecases/UC-ACC-001-0001.feature.md
+++ b/usecases/UC-ACC-001-0001.feature.md
@@ -6,13 +6,9 @@ This feature ensures that the ADS is able to adjust its speed such as to keep a 
 
 Confirm that the ADS is capable of keeping a safe distance from a preceding vehicle that decelerates partially.
 
-* Given a flat, straight road
-* And Ego drives at <vxi_ego>, centered on its lane
+* Given Ego drives at <vxi_ego>, centered on its lane
 * And Npc0 drives on the same lane as Ego, 30 meters ahead of it
 * And Npc0 drives slower than Ego, at a speed of <vxi_npc0>
-* And Ego must drive continuously (no full stops)
-* And Ego must not collide with Npc0
-* And Ego must not decelerate at a rate faster than <amin_ego>
 
 * When Ego gets close to Npc0
 * Then Ego starts decelerating
@@ -22,6 +18,9 @@ Confirm that the ADS is capable of keeping a safe distance from a preceding vehi
 * Then Ego starts decelerating further
 * And Ego matches Npc0's longitudinal speed
 * And Ego reaches the goal position
+* And Ego drives continuously (no full stops) at all times
+* And Ego drives with no collisions at all times
+* And Ego keeps its acceleration above <amin_ego> at all times
 
 ![Description](./images/UC-ACC-001-0001.drawio.svg)
 
