--- a/usecases/UC-AEB-001-0001.feature.md
+++ b/usecases/UC-AEB-001-0001.feature.md
@@ -6,11 +6,8 @@ This feature ensures that the ADS is able to prevent collisions when static obst
 
 Confirm that vehicle avoids a collision when a pedestrian is stopped on the road.
 
-* Given a flat, straight road
-* And Ego drives at <vxi_ego>, centered on its lane
+* Given Ego drives at <vxi_ego>, centered on its lane
 * And Pedestrian0 is standing still on the same lane as Ego, at a distance of <dxi_ego_pedestrian0>
-* And Ego must not collide with Pedestrian0
-* And Ego must not decelerate at a rate faster than <amin_ego>
 
 * When Ego gets close to Pedestrian0
 * Then Ego starts decelerating to a full stop
@@ -18,6 +15,8 @@ Confirm that vehicle avoids a collision when a pedestrian is stopped on the road
 * When Pedestrian0 moves completely out of Ego's lane
 * Then Ego resumes driving
 * And Ego reaches the goal position
+* And Ego drives with no collisions at all times
+* And Ego keeps its acceleration above <amin_ego> at all times
 
 ![Description](./images/UC-AEB-001-0001.drawio.svg)
 
