--- a/usecases/UC-NTR-002-0001.feature.md
+++ b/usecases/UC-NTR-002-0001.feature.md
@@ -6,7 +6,7 @@ Ensures the vehicle can safely overtake a stationary or slow-moving vehicle on t
 
 Confirm that the vehicle successfully overtakes the vehicle and reaches the destination safely.
 
-* Given Ego is driving at <vx_ego>
+* Given Ego is driving at <vxi_ego>
 * And Npc0 is driving in the side of the road with velocity <vx_npc0>
 * When Ego approaches Npc0
 * Then Ego overtake Npc0
@@ -17,7 +17,7 @@ Confirm that the vehicle successfully overtakes the vehicle and reaches the dest
 
 ### Examples: Stopped on the right side
 
-  | vxi_npc0 | vx_ego  | d_npc | parking_offset | w     | amin_ego     |
+  | vxi_npc0 | vxi_ego | d_npc | parking_offset | w     | amin_ego     |
   | -------- | ------- | ------| -------------- | ----- | ------------ |
   | 0 km/h   | 15 km/h | 35 m  | 2.5 m          | 4.0 m | -2.499 m/s^2 |
   | 5 km/h   | 15 km/h | 35 m  | 2.5 m          | 4.0 m | -2.499 m/s^2 |
@@ -25,7 +25,7 @@ Confirm that the vehicle successfully overtakes the vehicle and reaches the dest
   
 ### Examples: Stopped on the left side
 
-  | vxi_npc0 | vx_ego  | d_npc | parking_offset | w     | amin_ego     |
+  | vxi_npc0 | vxi_ego | d_npc | parking_offset | w     | amin_ego     |
   | -------- | ------- | ------| -------------- | ----- | ------------ |
   | 0 km/h   | 15 km/h | 35 m  | -2.5 m         | 4.0 m | -2.499 m/s^2 |
   | 5 km/h   | 15 km/h | 35 m  | -2.5 m         | 4.0 m | -2.499 m/s^2 |
