--- a/usecases/UC-NTR-002-0002.feature.md
+++ b/usecases/UC-NTR-002-0002.feature.md
@@ -6,7 +6,7 @@ Ensures the vehicle can safely navigate between parked vehicles on different sid
 
 Confirm that the vehicle successfully passes between two parked vehicles on different sides of the road and reaches the destination safely.
 
-* Given Ego is driving at <vx_ego>
+* Given Ego is driving at <vxi_ego>
 * And Npc0 is parked on one side of the road
 * And Npc1 is parked on the other side of the road with <d_npc0_npc1> from Npc0
 * When Ego approaches the parked vehicles
@@ -18,7 +18,7 @@ Confirm that the vehicle successfully passes between two parked vehicles on diff
 
 ### Examples: Stopped on the right and left side
 
-  | vxi_npc0 | vxi_npc1 | vx_ego  | d_npc0_npc1 | parking_offset | w     | amin_ego     |
+  | vxi_npc0 | vxi_npc1 | vxi_ego | d_npc0_npc1 | parking_offset | w     | amin_ego     |
   | -------- | -------- | ------- | ----------- | -------------- | ----- | ------------ |
   | 0 km/h   | 0 km/h   | 15 km/h | 25 m        | 2.1 m          | 4.0 m | -2.499 m/s^2 |
   | 0 km/h   | 0 km/h   | 15 km/h | 20 m        | 2.1 m          | 4.0 m | -2.499 m/s^2 |
@@ -26,7 +26,7 @@ Confirm that the vehicle successfully passes between two parked vehicles on diff
 
 ### Examples: Stopped on the left and right side
 
-  | vxi_npc0 | vxi_npc1 | vx_ego  | d_npc0_npc1 | parking_offset | w     | amin_ego     |
+  | vxi_npc0 | vxi_npc1 | vxi_ego | d_npc0_npc1 | parking_offset | w     | amin_ego     |
   | -------- | -------- | ------- | ----------- | -------------- | ----- | ------------ |
   | 0 km/h   | 0 km/h   | 15 km/h | 25 m        | -2.1 m         | 4.0 m | -2.499 m/s^2 |
   | 0 km/h   | 0 km/h   | 15 km/h | 20 m        | -2.1 m         | 4.0 m | -2.499 m/s^2 |
