--- a/usecases/UC-NTR-002-0003.feature.md
+++ b/usecases/UC-NTR-002-0003.feature.md
@@ -6,7 +6,7 @@ Ensures the vehicle can safely navigate when a parked vehicle starts moving whil
 
 Confirm that the vehicle successfully makes a decision to either overtake or wait when encountering a parked vehicle and an oncoming vehicle that starts moving.
 
-* Given Ego is driving at <vx_ego>
+* Given Ego is driving at <vxi_ego>
 * And Npc0 is parked on one side of the road
 * And Npc1 is initially stationary on the other side of the road
 * When the longitudinal distance between Ego and Npc0 is below <d_trigger>
@@ -20,7 +20,7 @@ Confirm that the vehicle successfully makes a decision to either overtake or wai
 
 ### Examples: Stopped on the right and left side
 
-  | vxi_npc0 | vx_npc1 | vx_ego  | d_trigger | d_npc0_npc1 | parking_offset | w     | amin_ego     |
+  | vxi_npc0 | vx_npc1 | vxi_ego | d_trigger | d_npc0_npc1 | parking_offset | w     | amin_ego     |
   | -------- | ------- | ------- | --------- |------------ | -------------- | ----- | ------------ |
   | 0 km/h   | 5 km/h  | 15 km/h | 7.0 m     | 25 m        | 2.3 m          | 4.0 m | -2.499 m/s^2 |
   | 0 km/h   | 10 km/h | 15 km/h | 7.0 m     | 25 m        | 2.3 m          | 4.0 m | -2.499 m/s^2 |
@@ -28,7 +28,7 @@ Confirm that the vehicle successfully makes a decision to either overtake or wai
 
 ### Examples: Stopped on the left and right side
 
-  | vxi_npc0 | vx_npc1 | vx_ego  | d_trigger | d_npc0_npc1 | parking_offset | w     | amin_ego     |
+  | vxi_npc0 | vx_npc1 | vxi_ego | d_trigger | d_npc0_npc1 | parking_offset | w     | amin_ego     |
   | -------- | ------- | ------- | --------- |------------ | -------------- | ----- | ------------ |
   | 0 km/h   | 5 km/h  | 15 km/h | 7.0 m     | 25 m        | -2.3 m         | 4.0 m | -2.499 m/s^2 |
   | 0 km/h   | 10 km/h | 15 km/h | 7.0 m     | 25 m        | -2.3 m         | 4.0 m | -2.499 m/s^2 |
