--- a/usecases/UC-NTR-003-0001.feature.md
+++ b/usecases/UC-NTR-003-0001.feature.md
@@ -1,15 +1,22 @@
-# Feature: Handle cut-in from vehicle at intersection
+# Feature: [Driving straight in intersection without traffic lights] Handle cut-in from oncoming lane vehicle turning at the intersection
 
-This feature ensures that the ego vehicle can safely handle a vehicle that cuts into the ego's path at an intersection.
+This feature ensures that ego can safely handle a vehicle that cuts into the ego's path at an intersection.
 
-## Scenario Outline: Vehicle from right performs a right turn at an intersection
+## Scenario Outline: Vehicle from oncoming lane performs a right turn at the intersection ahead of ego (LHT)
 
-Confirm that the vehicle safely handles a vehicle from the right performing a right turn at an intersection.
+Confirm that ego allows the turning vehicle to pass first before driving through the intersection.
 
 * Given Ego is driving at a constant velocity <vxi_ego>
-* And Npc0 is positioned to the right and intends to turn right
-* When Ego is <d_to_intersection> before the intersection, Npc0 starts turning right with a very small velocity <vx_npc0>
-* Then Ego reaches the destination without collisions
+* And Ego is approaching an intersection
+* And Npc0 is on the oncoming traffic lane, positioned on the opposite side of the intersection from ego
+
+* When Ego is <d_to_intersection> before the intersection
+* And Npc0 starts turning right into the intersection with speed <vx_npc0>
+* Then Ego slows down
+
+* When Npc0 clears Ego's path
+* Then Ego resumes driving and drives past the intersection
+* And Ego drives safely with no collisions at all times
 * And Ego does not decelerate at a rate below <amin_ego>
 
 ![Overview](./images/UC-NTR-003-0001.drawio.svg)
