--- a/usecases/UC-NTR-003-0002.feature.md
+++ b/usecases/UC-NTR-003-0002.feature.md
@@ -1,22 +1,28 @@
-# Feature: Handle oncoming vehicle while turning right at intersection
+# Feature: [Turning right in intersection without traffic lights] Handle oncoming lane vehicle driving straight at intersection
 
-This feature ensures that the ego vehicle can safely turn right at an intersection while an oncoming vehicle is approaching.
+This feature ensures that ego can safely turn right at an intersection while an oncoming vehicle is approaching.
 
-## Scenario Outline: Ego performs a right turn at an intersection with oncoming traffic
+## Scenario Outline: Vehicle from oncoming lane drives straight at the intersection ahead of ego (LHT)
 
-Confirm that the vehicle safely performs a right turn at an intersection with oncoming traffic.
+Confirm that ego safely performs a right turn at an intersection with oncoming traffic.
 
-* Given Ego is driving through an intersection at <vxi_ego>
-* When Ego is turning right
+* Given Ego is driving at a constant speed <vxi_ego>
+* And Ego is approaching an intersection where it intends to turn right
+* And Npc0 is stopped on the oncoming traffic lane, positioned on the opposite side of the intersection from Ego
+
+* When Ego is <d_to_intersection> before the intersection
 * And Npc0 starts to drive with acceleration <ax_npc0> and target speed <vx_npc0>
-* Then Ego reaches the destination without collisions
-* And Ego does not decelerate at a rate below <amin_ego>
-* And Ego stops more than one times in the intersection
+* Then Ego slows down
+
+* When Npc0 clears Ego's path
+* Then Ego resumes driving and completes the right turn
+* And Ego drives safely with no collisions at all times
+* And Ego does not decelerate at a rate below <amin_ego> at all times
 
 ![Overview](./images/UC-NTR-003-0002.drawio.svg)
 
 ### Examples
 
-| vx_npc0 | ax_npc0   | vxi_ego | amin_ego   |
-| ------- | --------- | ------- | ---------- |
-| 20 km/h | 1.5 m/s^2 | 15 km/h | -1.5 m/s^2 |
+| vxi_ego | d_to_intersection | vx_npc0 | ax_npc0   | amin_ego   |
+| ------- | ----------------- | ------- | --------- | ---------- |
+| 15 km/h | 10 m              | 20 km/h | 1.5 m/s^2 | -1.5 m/s^2 |
