--- a/usecases/UC-NTR-003-0003.feature.md
+++ b/usecases/UC-NTR-003-0003.feature.md
@@ -1,24 +1,28 @@
-# Feature: Decide to stop or pass for slow oncoming vehicle at intersection
+# Feature: [Driving straight in intersection without traffic lights] Yielding decision for slow oncoming lane vehicle turning at intersection
 
-This feature ensures that the ego vehicle makes a safe decision to either stop or proceed through an intersection when an oncoming vehicle is moving slowly.
+This feature ensures that the ego vehicle makes a safe decision to either stop or proceed driving straight at an intersection when there is an oncoming vehicle slowly turning into its path.
 
-## Scenario Outline: Ego decides to stop or pass for a slow oncoming vehicle
+## Scenario Outline: Ego decides to whether to yield for slow oncoming vehicle turning right at the intersection (LHT)
 
-Confirm that the vehicle safely decides whether to stop or pass when a slow-moving NPC interferes with its trajectory in an intersection.
+Confirm that the vehicle safely decides whether to stop or pass when a slow-moving NPC turns right and interferes with its trajectory in an intersection.
 
-* Given Ego is driving through an intersection at <vxi_ego>
-* And Npc0 is positioned to the opposite lane and intends to turn right
+* Given Ego is driving at a constant velocity <vxi_ego>
+* And Ego is approaching an intersection
+* And Npc0 is on the oncoming traffic lane, positioned on the opposite side of the intersection from ego
+
 * When Ego is <d_to_intersection> before the intersection
-* And Npc0 starts turning right with a very small velocity <vx_npc0>
-* Then Ego reaches the destination without collisions
-* And Ego does not decelerate at a rate below <amin_ego>
+* And Npc0 starts turning right into the intersection with speed <vx_npc0>
+* Then Ego slows down or continues driving straight
+* And Ego drives past the intersection
+* And Ego drives safely with no collisions at all times
+* And Ego does not decelerate at a rate below <amin_ego> at all times
 
 ![Overview](./images/UC-NTR-003-0003.drawio.svg)
 
 ### Examples
 
-| vx_npc0  | vxi_ego | d_to_intersection | amin_ego     |
-| -------- | ------- | ----------------- | ------------ |
-| 3.5 km/h | 15 km/h | 30 m              | -2.499 m/s^2 |
-| 5.0 km/h | 15 km/h | 30 m              | -2.499 m/s^2 |
-| 7.5 km/h | 15 km/h | 30 m              | -2.499 m/s^2 |
+| vxi_ego | d_to_intersection | vx_npc0  | amin_ego     |
+| ------- | ----------------- | -------- | ------------ |
+| 15 km/h | 30 m              | 3.5 km/h | -2.499 m/s^2 |
+| 15 km/h | 30 m              | 5.0 km/h | -2.499 m/s^2 |
+| 15 km/h | 30 m              | 7.5 km/h | -2.499 m/s^2 |
