Refine overtaking scenario for ego vehicle
Updated scenario to clarify ego vehicle's actions and conditions

--- a/usecases/UC-NTR-002-0001.feature.md
+++ b/usecases/UC-NTR-002-0001.feature.md
@@ -4,14 +4,17 @@ Ensures the vehicle can safely overtake a stationary or slow-moving vehicle on t
 
 ## Scenario Outline: Vehicle is stopped on the roadside
 
-Confirm that the vehicle successfully overtakes the vehicle and reaches the destination safely.
+Confirm that ego successfully overtakes the vehicle and reaches the destination safely.
 
 * Given Ego is driving at <vxi_ego>
-* And Npc0 is driving in the side of the road with velocity <vx_npc0>
+* And Npc0 is positioned on the side of the same lane
+* And Npc0 is driving in the same direction as Ego with velocity <vxi_npc0>
+
 * When Ego approaches Npc0
 * Then Ego overtake Npc0
-* And Ego reaches the destination without collision
-* And Ego does not decelerate at a rate below <amin_ego> during driving
+* And Ego reaches the destination
+* And Ego drives safely with no collisions at all times
+* And Ego does not decelerate at a rate below <amin_ego> at all times
 
 ![Overview](./images/UC-NTR-002-0001.drawio.svg)
 
