Clarify parked vehicle positions and safety conditions
Updated the scenario to clarify the positioning of parked vehicles and added safety conditions for Ego's navigation.

--- a/usecases/UC-NTR-002-0002.feature.md
+++ b/usecases/UC-NTR-002-0002.feature.md
@@ -7,16 +7,18 @@ Ensures the vehicle can safely navigate between parked vehicles on different sid
 Confirm that the vehicle successfully passes between two parked vehicles on different sides of the road and reaches the destination safely.
 
 * Given Ego is driving at <vxi_ego>
-* And Npc0 is parked on one side of the road
-* And Npc1 is parked on the other side of the road with <d_npc0_npc1> from Npc0
+* And Npc0 is parked on one side of the same lane
+* And Npc1 is parked on the other side of the same lane, <d_npc0_npc1> ahead of Npc0
+
 * When Ego approaches the parked vehicles
 * Then Ego navigates between Npc0 and Npc1
-* And Ego reaches the destination without collision
-* And Ego does not decelerate at a rate below <amin_ego> during driving
+* And Ego reaches the destination
+* And Ego drives safely with no collisions at all times
+* And Ego does not decelerate at a rate below <amin_ego> at all times
 
 ![Overview](./images/UC-NTR-002-0002.drawio.svg)
 
-### Examples: Stopped on the right and left side
+### Examples: Npc0 on the right side
 
   | vxi_npc0 | vxi_npc1 | vxi_ego | d_npc0_npc1 | parking_offset | w     | amin_ego     |
   | -------- | -------- | ------- | ----------- | -------------- | ----- | ------------ |
@@ -24,7 +26,7 @@ Confirm that the vehicle successfully passes between two parked vehicles on diff
   | 0 km/h   | 0 km/h   | 15 km/h | 20 m        | 2.1 m          | 4.0 m | -2.499 m/s^2 |
   | 0 km/h   | 0 km/h   | 15 km/h | 15 m        | 2.1 m          | 4.0 m | -2.499 m/s^2 |
 
-### Examples: Stopped on the left and right side
+### Examples: Npc0 on the left side
 
   | vxi_npc0 | vxi_npc1 | vxi_ego | d_npc0_npc1 | parking_offset | w     | amin_ego     |
   | -------- | -------- | ------- | ----------- | -------------- | ----- | ------------ |
