--- a/usecases/UC-NTR-002-0003.feature.md
+++ b/usecases/UC-NTR-002-0003.feature.md
@@ -1,20 +1,23 @@
-# Feature: Overtake the moving vehicles in side of the road
+# Feature: Overtake the stopped or slow-moving vehicles in side of the road with oncoming traffic
 
-Ensures the vehicle can safely navigate when a parked vehicle starts moving while Ego is approaching another parked vehicle.
+Ensures that Ego can safely overtake a parked vehicle, or a slow-moving vehicle in the presence of oncoming traffic on the same lane.
 
-## Scenario Outline: Vehicle is stopped on roadside while another vehicle starts moving from the opposite side
+## Scenario Outline: Overtake stopped vehicle on roadside while an oncoming vehicle starts moving
 
 Confirm that the vehicle successfully makes a decision to either overtake or wait when encountering a parked vehicle and an oncoming vehicle that starts moving.
 
 * Given Ego is driving at <vxi_ego>
-* And Npc0 is parked on one side of the road
-* And Npc1 is initially stationary on the other side of the road
+* And Npc0 is parked on one side of the same lane
+* And Npc1 is parked on the other side of the same lane, <d_npc0_npc1> ahead of Npc1
+* And Npc1 is facing the opposite direction from Ego
+
 * When the longitudinal distance between Ego and Npc0 is below <d_trigger>
 * And Npc1 starts to drive with velocity <vx_npc1>
-* Then Ego makes a decision to overtake Npc0 or wait for Npc1
-* And Ego overtakes Npc0 or waits for Npc1 in proper place before overtaking
-* And Ego reaches the destination without collision
-* And Ego does not decelerate at a rate below <amin_ego> during driving
+* Then Ego starts overtaking Npc0 or waits for Npc1 to pass
+* And Ego overtakes Npc0
+* And Ego reaches the destination
+* And Ego drives safely with no collision at all times
+* And Ego does not decelerate at a rate below <amin_ego> at all times
 
 ![Overview](./images/UC-NTR-002-0003.drawio.svg)
 
