--- a/usecases/UC-NTR-002-0004.feature.md
+++ b/usecases/UC-NTR-002-0004.feature.md
@@ -2,19 +2,23 @@
 
 Ensures the vehicle can safely wait for an oncoming vehicle to clear from the ego lane before proceeding.
 
-## Scenario Outline: Overtake the vehicle which comes from opposite side
+## Scenario Outline: Wait for an oncoming vehicle that veers into Ego's lane to overtake a parked vehicle and clear off the lane
 
-Confirm that the vehicle successfully waits until the overtaking vehicle has left the lane when overtaking a parked vehicle from the opposite side.
+Confirm that the vehicle successfully waits until the overtaking vehicle has left the lane when overtaking a vehicle parked in the opposite side.
 
 * Given Ego is driving at <vxi_ego>
-* And Npc0 is parked in the opposite side of the road
-* And Npc1 is driving in the opposite lane
+* And Npc0 is parked in the neighboring oncoming lane, in the opposite side of the road
+* And Npc1 is driving in the oncoming lane, at a position further from Ego than Npc0
+
 * When the longitudinal distance between Npc0 and Ego is below <d_trigger>
 * And Npc1 starts to overtake Npc0 with velocity <vx_npc1>
-* Then Ego begins decelerating before Npc1 approaches within <d_dec> behind Npc0
-* And Ego waits for Npc1 to clear from the ego lane
-* And Ego reaches the destination without collision
-* And Ego does not decelerate at a rate below <amin_ego> during driving
+* Then Ego decelerates to a full stop leaving enough margin for Npc1 to pass
+
+* When Npc1 completes the overtake and returns to the oncoming lane
+* Then Ego resumes driving
+* And Ego reaches the destination
+* And Ego drives safely with no collisions at all times
+* And Ego does not decelerate at a rate below <amin_ego> at all times
 
 ![Overview](./images/UC-NTR-002-0004.drawio.svg)
 
