added diagrams to PoV scenarios
Signed-off-by: Diego Yabuki <diegoken.yabuki@tier4.jp>

--- a/usecases/pov/UC-PLN-001-0002.feature.md
+++ b/usecases/pov/UC-PLN-001-0002.feature.md
@@ -17,7 +17,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 * And Ego drives continuously at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0002_1.drawio.svg)
 
 ### Examples: 
 
@@ -45,7 +45,7 @@ Confirm that ego is able to continuously adjust its speed such as to maintain a 
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0002_2.drawio.svg)
 
 ### Examples:
 
@@ -72,7 +72,7 @@ Confirm that ego is able to continuously adjust its speed such as to maintain a 
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0002_3.drawio.svg)
 
 ### Examples:
 
@@ -96,7 +96,7 @@ Confirm that ego is able to stop safely when a stopped motorcycle is detected ah
 * And Ego reaches standstill
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0002_4.drawio.svg)
 
 ### Examples: 
 
