--- a/usecases/pov/UC-PLN-001-0005.feature.md
+++ b/usecases/pov/UC-PLN-001-0005.feature.md
@@ -20,7 +20,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-NTR-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0005_1.drawio.svg)
 
 ### Examples: 
 
@@ -49,7 +49,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-NTR-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0005_2.drawio.svg)
 
 ### Examples: 
 
