--- a/usecases/pov/UC-PLN-002-0001.feature.md
+++ b/usecases/pov/UC-PLN-002-0001.feature.md
@@ -14,7 +14,7 @@ Confirm that ego is able to adjust its speed before entering the new regulation 
 * And Ego drives continuously at all times
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-002-0001_1.drawio.svg)
 
 ### Examples:
 
@@ -36,7 +36,7 @@ Confirm that ego is able to adjust its speed when entering the new regulation ar
 * Then Ego starts accelerating to match the lowest value between the new speed limit <vx_limit> and Ego's intended driving speed <vx_ego>
 * And Ego drives continuously at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-002-0001_2.drawio.svg)
 
 ### Examples:
 
