--- a/usecases/pov/UC-PLN-004-0002.feature.md
+++ b/usecases/pov/UC-PLN-004-0002.feature.md
@@ -19,7 +19,7 @@ Confirm that ego is able to stop safely when the preceding vehicle cuts out of e
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-004-0002_1.drawio.svg)
 
 ### Examples: 
 
@@ -47,7 +47,7 @@ Confirm that ego is able to stop safely when the preceding vehicle cuts out of e
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-004-0002_2.drawio.svg)
 
 ### Examples: 
 
