--- a/usecases/pov/UC-PLN-004-0003.feature.md
+++ b/usecases/pov/UC-PLN-004-0003.feature.md
@@ -7,16 +7,16 @@ Ensures that ego is able to fully stop when faced with a situation of imminent c
 Confirm that ego is able to stop safely when a pedestrian jumps into the road ahead of ego, up to a certain degree.
 
 * Given Ego is driving at <vxi_ego> on the lane closest to a road edge
-* And Animal0 is on the neighboring edge of the road, ahead of ego
+* And Pedestrian0 is on the neighboring edge of the road, ahead of ego
 
-* When Ego approaches Animal0 longitudinally, to within <dx_ego_pedestrian0>
-* And later Animal0 enters the ego lane within the timespan of <time_cut_in_pedestrian0>
+* When Ego approaches Pedestrian0 longitudinally, to within <dx_ego_pedestrian0>
+* And later Pedestrian0 enters the ego lane within the timespan of <time_cut_in_pedestrian0>
 * Then Ego starts decelerating
 * And Ego reaches standstill
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-004-0003_1.drawio.svg)
 
 ### Examples: 
 
@@ -41,7 +41,7 @@ Confirm that ego is able to stop safely when an animal jumps into the road ahead
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-004-0003_2.drawio.svg)
 
 ### Examples: 
 
