--- a/usecases/pov/UC-PLN-001-0004.feature.md
+++ b/usecases/pov/UC-PLN-001-0004.feature.md
@@ -18,7 +18,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0004_1.drawio.svg)
 
 ### Examples: 
 
@@ -44,7 +44,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0004_2.drawio.svg)
 
 ### Examples: 
 
@@ -74,7 +74,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0004_3.drawio.svg)
 
 ### Examples: 
 
@@ -104,7 +104,7 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0004_4.drawio.svg)
 
 ### Examples: 
 
