--- a/usecases/pov/UC-PLN-001-0006.feature.md
+++ b/usecases/pov/UC-PLN-001-0006.feature.md
@@ -14,17 +14,17 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 * When Ego approaches Npc0 longitudinally, to within <dx_ego_npc0>
 * And later Npc0 cuts out from the ego lane to the left, within a timespan of <time_cut_in_npc0>
-* And Motorbike0 decelerates down to <vx_motorbike0> at a rate of <ax_motorbike0>
-* Then Ego starts decelerating to match the speed of Motorbike0, <vx_motorbike0>
+* And Motorbike0 decelerates down to <vx_motorbike1> at a rate of <ax_motorbike0>
+* Then Ego starts decelerating to match the speed of Motorbike0, <vx_motorbike1>
 * And Ego drives continuously at all times
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0006_1.drawio.svg)
 
 ### Examples: 
 
-  | vxi_ego | vxi_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | vx_motorbike0 | ax_motorbike0 | time_cut_in_npc0 | axmin_ego  |
+  | vxi_ego | vxi_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | vx_motorbike1 | ax_motorbike0 | time_cut_in_npc0 | axmin_ego  |
   | ------- | -------- | ------------------- | ----------- | ------------  | ------------- | ---------------- | ---------- |
   | 20 km/h | 15 km/h  | 15 m                | 15 m        | 5 km/h        | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
   | 30 km/h | 20 km/h  | 15 m                | 15 m        | 10 km/h       | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
@@ -43,17 +43,17 @@ Confirm that ego is able to adjust its speed such as to maintain a safe distance
 
 * When Ego approaches Npc0 longitudinally, to within <dx_ego_npc0>
 * And later Npc0 cuts out from the ego lane to the right, within a timespan of <time_cut_in_npc0>
-* And Motorbike0 decelerates down to <vx_motorbike0> at a rate of <ax_motorbike0>
-* Then Ego starts decelerating to match the speed of Motorbike0, <vx_motorbike0>
+* And Motorbike0 decelerates down to <vx_motorbike1> at a rate of <ax_motorbike0>
+* Then Ego starts decelerating to match the speed of Motorbike0, <vx_motorbike1>
 * And Ego drives continuously at all times
 * And Ego keeps its deceleration rate slower than <axmin_ego> at all times
 * And Ego drives safely with no collisions at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-001-0006_2.drawio.svg)
 
 ### Examples: 
 
-  | vxi_ego | vxi_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | vx_motorbike0 | ax_motorbike0 | time_cut_in_npc0 | axmin_ego  |
+  | vxi_ego | vxi_npc0 | dxi_npc0_motorbike0 | dx_ego_npc0 | vx_motorbike1 | ax_motorbike0 | time_cut_in_npc0 | axmin_ego  |
   | ------- | -------- | ------------------  | ----------- | ------------  | ------------- | ---------------- | ---------- |
   | 20 km/h | 15 km/h  | 15 m                | 15 m        | 5 km/h        | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
   | 30 km/h | 20 km/h  | 15 m                | 15 m        | 10 km/h       | -1 m/s^2      | 4 s              | -1.5 m/s^2 |
