--- a/usecases/pov/UC-PLN-003-0001.feature.md
+++ b/usecases/pov/UC-PLN-003-0001.feature.md
@@ -14,7 +14,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 * And Ego drives continuously at all times
 * And Ego drives within <d_lane_center_offset> from the lane center at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-003-0001_1.drawio.svg)
 
 ### Examples:
 
@@ -37,7 +37,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 * And Ego drives continuously at all times
 * And Ego drives within <d_lane_center_offset> from the lane center at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-003-0001_2.drawio.svg)
 
 ### Examples:
 
@@ -61,7 +61,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 * And Ego drives continuously at all times
 * And Ego drives within <d_lane_center_offset> from the lane center at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-003-0001_3.drawio.svg)
 
 ### Examples:
 
@@ -85,7 +85,7 @@ Confirm that ego is able to continue driving on the center of the lane when the 
 * And Ego drives continuously at all times
 * And Ego drives within <d_lane_center_offset> from the lane center at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-003-0001_4.drawio.svg)
 
 ### Examples:
 
@@ -109,7 +109,7 @@ Confirm that ego is able to continue driving on the center of the lane when both
 * And Ego drives continuously at all times
 * And Ego drives within <d_lane_center_offset> from the lane center at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-003-0001_5.drawio.svg)
 
 ### Examples:
 
@@ -133,7 +133,7 @@ Confirm that ego is able to continue driving on the center of the lane during le
 * And Ego drives continuously at all times
 * And Ego drives within <d_lane_center_offset> from the lane center at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-003-0001_6.drawio.svg)
 
 ### Examples:
 
@@ -157,7 +157,7 @@ Confirm that ego is able to continue driving on the center of the lane during ri
 * And Ego drives continuously at all times
 * And Ego drives within <d_lane_center_offset> from the lane center at all times
 
-![Overview](./images/UC-PLN-001-0001.drawio.svg)
+![Overview](./images/UC-PLN-003-0001_7.drawio.svg)
 
 ### Examples:
 
